assets/css/common/header.css
header {
    position: sticky;
    top: 0;
    padding: 1em 10vw;
    display: flex;
    justify-content: right;
    align-items: center;
    gap: 0 1em;
    z-index: 2;
    background-color: var(--secondary-bg);
    /* box-shadow: 0 0 0 0.15em #6bc9e6; */

    [href="#main"] {
        display: none;
    }

    >[href="./"] {
        font-size: 1.5em;
        line-height: initial;
        margin-right: auto;
    }

    button {
        /* width: 1em; */

        path {
            /* stroke: var(--text); */
            stroke: black;
            stroke-width: 3em;
        }
    }

    nav {
        display: flex;
        flex-direction: column;
        gap: 1em 0;
        top: 0;
        right: -100%;
        height: 100vh;
        background-color: inherit;
        visibility: hidden;
        transition-property: right, visibility;
        transition-duration: 0.7s;

        &:popover-open {
            right: 0;
            visibility: visible;

            &::backdrop {
                background-color: #000000;
                opacity: 75%;
            }
        }

        button {
            /* margin: 1.35em 10vw 0 auto; */
        }

        :is(summary, a) {
            padding: 0.35em 2em;
            display: list-item;
        }

        details {
            a {
                padding-left: 3em;
            }
        }
    }

    @media screen and (541px <=width) {
        padding: 1.35em 7.5vw;
        gap: 0 1.5em;

        >[href="./"] {
            font-size: 2em;
        }

        >img {
            width: 1.8em;
        }

        button {
            /* width: 1.25em; */
        }

        nav {
            button {
                /* margin: 1.65em 7.5vw 0 auto; */
            }
        }
    }

    @media screen and (1083px <=width) {
        padding: 1em 7.5vw;

        [href="#main"] {
            display: initial;
            position: absolute;
            top: -100%;

            &:focus {
                font-size: 1.5em;
                padding: 1em;
                top: 50vh;
                left: 50vw;
                transform: translate(-50%, -50%);
                background-color: inherit;
            }
        }

        >[href="./"] {
            font-size: 2.25em;
        }

        button:has(path) {
            display: none;
            /* width: auto; */
        }

        [popovertarget="a"] {
            /* all: initial; */

            display: list-item;
            /* counter-increment: list-item 0;
            list-style: inside disclosure-closed; */
            /* display: initial; */
            /* font: inherit;
            cursor: pointer; */
            anchor-name: --anchor-name;
            /* margin: 0; */
            padding: 0.5em 0.75em;
        }

        [popovertarget="a"]:active {
            pointer-events: none;
        }

        /* li:has(button) button::marker {
            content: "▶";
        } */

        /* li:has(button)::marker {
            content: "▶";
        } */

        li:has([popovertarget="a"]):hover ul {
            /* display: initial; */
            display: block;
        }

        li:has([popovertarget="a"]):hover [popovertarget="a"] {
            /* display: initial; */
            cursor: pointer;
            padding: 0.5em 0.75em;
            transition: background-color 0.35s;
            border-radius: 0.2em;
            background-color: var(--background-text);

        }

        [popovertarget="a"] {
            &::before {
                content: "►" / "";
                margin-right: 0.25em;
            }
        }

        li:has([popovertarget="a"]):hover {
            cursor: pointer;
        }

        li:has([popovertarget="a"]):hover [popovertarget] {
            &::before {
                content: "▼" / "";
                margin-right: 0.25em;
            }
        }

        [popovertarget="a"]:has(+:popover-open) {
            &::before {
                content: "▼" / "";
                margin-right: 0.25em;
            }
        }

        [popovertarget="a"]:has(+[popover]:hover) {
            &::before {
                content: "▼" / "";
                margin-right: 0.25em;
            }
        }

        #a {
            position: absolute;
            position-anchor: --anchor-name;
            top: anchor(bottom);
            left: anchor(left);
        }

        #a:hover {
            display: block;
        }


        nav {
            all: unset;
            margin-right: 7em;

            >ul {
                display: flex;
                align-items: baseline;
            }

            :is(summary, a, [popovertarget="a"]) {
                padding: 0.5em 0.75em;
                transition: background-color 0.35s;
                border-radius: 0.2em;

                &:hover {
                    background-color: var(--background-text);
                }
            }

            details {
                ul {
                    position: absolute;
                    background-color: var(--secondary-bg);

                    a {
                        padding: 0.5em 1em;
                    }
                }
            }
        }
    }
}

